--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: doh_client
-description: DNS-over-HTTPS Client
+description: This implementation allows you to send requests to DNS-over-HTTPS services.
 version: 0.1.1
 author: Skotnikov Sergei <skotnikov@europe.com>
 homepage: https://github.com/bronjham-code/doh_client
