--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ homepage: https://github.com/bronjham-code/doh_client
 environment:
   sdk: '>=2.12.0 <3.0.0' #null safety on after 2.12.0
 
-#dependencies:
+dependencies: 
+  universal_io: ^2.0.4
 
 #dev_dependencies:
   #test: ^1.14.4
